<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HockeyApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="enable_sound_summ">Enable Sound</string>
    <string name="update_interval">Timer update interval</string>
    <string name="update_interval_summ">The interval in milliseconds between each timer update.</string>
    <string name="timer_text">Press screen\nto start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="default_score">0</string>
    <string name="reset_dialog_question">Do you want to reset current timer?</string>
    <string name="reset_dialog_title">Reset timer</string>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="custom_match_length">Enable custom match length</string>
    <string name="custom_match_length_summ">Enable custom match length</string>
    <string name="enable_tts">Enable tts.</string>
    <string name="enable_tts_summ">Enables text to speech for time updates.</string>
    <string name="custom_game_length">Custom game length in minutes.</string>
    <string name="custom_game_length_summ">Custom game length in minutes.</string>
    <string name="custom_game_enable_preamble">Enable game preamble time.</string>
    <string name="custom_game_preamble_time_summary">The number of seconds before the game starts.</string>
    <string name="custom_game_preamble_time">Game preamble in seconds.</string>

</resources>
